--- a/sass/pages/_faq.scss
+++ b/sass/pages/_faq.scss
@@ -5,13 +5,13 @@
             background-color: $white;
         }
         @include sm {
-            padding: 30px 0;
+            padding: 30px 0 !important;
         }
         @include lg {
-            padding: 38px 0;
+            padding: 38px 0 !important;
         }
         @include xl {
-            padding: 48px 0;
+            padding: 48px 0 !important;
         }
         .accordion-wrapper{
             .accordion-list-item {
